--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <a href="#">Sobre</a>
         </div>
         <div class="btn-whatsapp-header">
-            <img class="icon-whatsapp" src="img/whatsapp-icon-svg.svg" alt="Enviar mensagem">
             <a class="btn-whatsapp" target="_blank"
-                href="https://api.whatsapp.com/send?phone=5585989913395">Whatsapp</a>
+                href="https://api.whatsapp.com/send?phone=5585989913395"><img class="icon-whatsapp" src="img/whatsapp-icon-svg.svg" alt="Enviar mensagem">Whatsapp</a>
         </div>
     </div>
 <div class="content-home">
