alteração no css

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <div class="content-home">
     <div class="content">
         <section class="section-home">
-            <div class="colun-home-01">
+            <div class="colun-home">
                 <h1>Chegou a hora de proteger seu patrimônio e quem você ama.</h1>
                 <br>
                 <h2 class="name-pl">PL Seguros &copy;</h2>
             </div>
-            <div class="colun-home-01">
+            <div class="colun-home">
                 <img class="img-home" src="img/img-index.png" alt="Imagem principal">
             </div>
         </section>
