--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
             <a href="#">Sobre</a>
         </div>
         <div class="btn-whatsapp-header">
-            <a class="btn-whatsapp" target="_blank"
-                href="https://api.whatsapp.com/send?phone=5585989913395"><img class="icon-whatsapp" src="img/whatsapp-icon-svg.svg" alt="Enviar mensagem">Whatsapp</a>
+            <a class="btn-whatsapp" target="_blank" href="https://api.whatsapp.com/send?phone=5585989913395"><img
+                    class="icon-whatsapp" src="img/whatsapp-icon-svg.svg" alt="Enviar mensagem">Whatsapp</a>
         </div>
     </div>
-<div class="content-home">
     <div class="content">
         <section class="section-home">
             <div class="colun-home">
@@ -38,8 +37,10 @@
                 <img class="img-home" src="img/img-index.png" alt="Imagem principal">
             </div>
         </section>
+        <section class="section-seguros" id="seguros">
+
+        </section>
     </div>
-</div>    
 
 
 
