adicionado tipos de seguros a seção 'seguros para pessoas'

--- a/index.html
+++ b/index.html
@@ -31,15 +31,53 @@
             <div class="colun-home">
                 <h1>Chegou a hora de proteger seu patrimônio e quem você ama.</h1>
                 <br>
-                <h2 class="name-pl">PL Seguros &copy;</h2>
+                <h2 class="name-pl">PL Seguros &reg;</h2>
             </div>
             <div class="colun-home">
                 <img class="img-home" src="img/img-index.png" alt="Imagem principal">
             </div>
         </section>
         <section class="section-seguros" id="seguros">
-
+            <div class="h2-seguros">
+                <h2>Seguros para Pessoas</h2>
+            </div>
+            <div class="grade-seguros">
+                <div class="a-seguros">
+                    <a href="/pages/seguro-automovel.hmtl">
+                        <div class="icon-seguros">
+                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                        </div>
+                        <div class="titulo-seguros"> Seguro Automóvel</div>
+                        <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
+                            danos causados por colisão, incêndio, roubo e furto, inundação, queda de objeto sobre o
+                            veículo, além de danos aos pneus ou à pintura.</div>
+                    </a>
+                </div>
+                <div class="a-seguros">
+                    <a href="/pages/seguro-automovel.hmtl">
+                        <div class="icon-seguros">
+                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                        </div>
+                        <div class="titulo-seguros"> Seguro Automóvel</div>
+                        <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
+                            danos causados por colisão, incêndio, roubo e furto, inundação, queda de objeto sobre o
+                            veículo, além de danos aos pneus ou à pintura.</div>
+                    </a>
+                </div>
+                <div class="a-seguros">
+                    <a href="/pages/seguro-automovel.hmtl">
+                        <div class="icon-seguros">
+                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                        </div>
+                        <div class="titulo-seguros"> Seguro Automóvel</div>
+                        <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
+                            danos causados por colisão, incêndio, roubo e furto, inundação, queda de objeto sobre o
+                            veículo, além de danos aos pneus ou à pintura.</div>
+                    </a>
+                </div>
+            </div>
         </section>
+
     </div>
 
 
