--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="grade-seguros">
                 <div class="a-seguros">
-                    <a href="/pages/seguro-automovel.hmtl">
+                    <a href="pages/seguro-automovel.hmtl">
                         <div class="icon-seguros">
-                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                            <img src="img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
                         </div>
                         <div class="titulo-seguros"> Seguro Automóvel</div>
                         <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
@@ -54,9 +54,9 @@
                     </a>
                 </div>
                 <div class="a-seguros">
-                    <a href="/pages/seguro-automovel.hmtl">
+                    <a href="pages/seguro-automovel.hmtl">
                         <div class="icon-seguros">
-                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                            <img src="img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
                         </div>
                         <div class="titulo-seguros"> Seguro Automóvel</div>
                         <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
@@ -65,9 +65,9 @@
                     </a>
                 </div>
                 <div class="a-seguros">
-                    <a href="/pages/seguro-automovel.hmtl">
+                    <a href="pages/seguro-automovel.hmtl">
                         <div class="icon-seguros">
-                            <img src="/img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
+                            <img src="img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
                         </div>
                         <div class="titulo-seguros"> Seguro Automóvel</div>
                         <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
