--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <div class="icon-seguros">
                             <img src="img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
                         </div>
-                        <div class="titulo-seguros"> Seguro Automóvel</div>
+                        <div class="titulo-seguros"> Seguro Residencial</div>
                         <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
                             danos causados por colisão, incêndio, roubo e furto, inundação, queda de objeto sobre o
                             veículo, além de danos aos pneus ou à pintura.</div>
@@ -69,7 +69,7 @@
                         <div class="icon-seguros">
                             <img src="img/seguro-auto.png" id="img-seguro-auto" alt="Seguro Automóvel">
                         </div>
-                        <div class="titulo-seguros"> Seguro Automóvel</div>
+                        <div class="titulo-seguros"> Consórcio Imobiliário</div>
                         <div class="subtitulo-seguros">Com o Seguro Automóvel seu veículo fica protegido contra
                             danos causados por colisão, incêndio, roubo e furto, inundação, queda de objeto sobre o
                             veículo, além de danos aos pneus ou à pintura.</div>
